<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="26dp"
        android:paddingVertical="32dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtView_registerErrors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Errors"
            android:textColor="#FF0000"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txtView_registerWarnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Warnings"
            android:textColor="#FF5722"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/editText_accountEmailRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"/>

        <EditText
            android:id="@+id/editText_accountFirstnameRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_firstname"
            android:inputType="textPersonName"
            android:minHeight="48dp"/>

        <EditText
            android:id="@+id/editText_accountLastnameRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_lastname"
            android:inputType="textPersonName"
            android:minHeight="48dp"/>

        <EditText
            android:id="@+id/editText_accountPasswordRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"/>

        <TextView
            android:id="@+id/txtView_alreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/already_have_an_account"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_register" />

    </LinearLayout>

</ScrollView>